syntax = "proto3";

package order;

option go_package = "grpc-rabbitmq-app/proto/orderpb";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string user_id = 1;
  string product_id = 2 ;
  int32 quantity = 3;
}

message OrderResponse{
  string order_id = 1;
  string status = 2;
}